Wstep, logo, tlo, wizytowka

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Solarcan</title>
+    <title>Witaj Bratku!</title>
     <!-- CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css" />
@@ -20,6 +20,7 @@
             emailjs.init("user_1ZWpTzjcPjECN4VgDai4g");
         })();
     </script>
+    <link href="https://fonts.cdnfonts.com/css/playlist" rel="stylesheet">
 </head>
 
 <body>
@@ -27,28 +28,30 @@
     <div class="navbar-fixed" id="home">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">solarcan</a>
+                <a id="logo-container" href="#" class="brand-logo"
+                    style="font-family: 'Playlist', sans-serif;text-transform:capitalize">Witaj
+                    Bratku!</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#dont-touch">Please No Touching</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home">O Nas</a></li>
+                    <li><a href="#gallery">Galeria</a></li>
+                    <li><a href="#dont-touch">Cennik</a></li>
+                    <!-- <li><a href="#how-it-works">How It Works</a></li> -->
+                    <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </div>
         </nav>
     </div>
     <ul id="mobile-demo" class="sidenav">
-        <li><a class="sidenav-close" href="#home">Home</a></li>
-        <li><a class="sidenav-close" href="#gallery">Gallery</a></li>
-        <li><a class="sidenav-close" href="#dont-touch">Please No Touching</a></li>
-        <li><a class="sidenav-close" href="#how-it-works">How It Works</a></li>
-        <li><a class="sidenav-close" href="#contact">Contact</a></li>
+        <li><a class="sidenav-close" href="#home">O Nas</a></li>
+        <li><a class="sidenav-close" href="#gallery">Galeria</a></li>
+        <li><a class="sidenav-close" href="#dont-touch">Cennik</a></li>
+        <!-- <li><a class="sidenav-close" href="#how-it-works">How It Works</a></li> -->
+        <li><a class="sidenav-close" href="#contact">Kontakt</a></li>
     </ul>
     <!-- Banner  -->
     <div id="index-banner" class="parallax-container section scrollspy">
-        <div class="section no-pad-bot">
+        <!-- <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
                 <h1 class="header center grey-text text-lighten-5">SOLARCAN</h1>
@@ -56,62 +59,67 @@
                     <h5 class="header col s12 light">Extreme time exposure experiment capturing the path of the sun</h5>
                 </div>
                 <div class="row center">
-                    <a href="#dont-touch" id="download-button"
-                        class="btn-large waves-effect waves-light red lighten-1">Please don't touch the can</a>
+                    <a href="assets/images/wizytowka.pdf" id="download-button"
+                        class="btn-large waves-effect waves-light red lighten-1">Wizytówka</a>
                 </div>
                 <br><br>
             </div>
-        </div>
-        <div class="parallax"><img src="assets/images/background.jpeg" alt="Solarcan background image"></div>
+        </div> -->
+        <div class="parallax"><img src="assets/images/background.jpeg" style="width:100%;height:auto;"
+                alt="Solarcan background image"></div>
     </div>
     <!-- Icon Section -->
     <div class="container">
         <div class="section">
             <div class="row">
                 <div class="col s12">
-                    <h5 class="center-align welcome">Hey there!</h5>
-                    <h6 class="center-align welcome">You seem to have found a Solarcan! Are you wondering what it is?
-                        Well, let me explain.</h6>
-                    <hr>
+                    <h3 class="center-align welcome">Odkryj Magię Kwiatów <br /> z Naszą Pracownią Florystyczną</h3>
+                    <p class="light">Witaj w naszej pracowni florystycznej, gdzie każdy kwiat
+                        ma swoją historię, a każda okazja staje się niezapomniana dzięki wyjątkowym kompozycjom,
+                        które tworzymy. Jesteśmy dumni z faktu, że od lat możemy towarzyszyć naszym klientom w
+                        najważniejszych chwilach ich życia, oferując kompleksową oprawę florystyczną ślubów,
+                        Komunii, uroczystości.</p>
+                    <!-- <hr> -->
                 </div>
             </div>
+            <div class="row center">
+                <a href="assets/images/wizytowka.pdf" id="download-button"
+                    class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C">Nasza
+                    Wizytówka</a>
+            </div>
             <div class="row">
+                <hr>
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center"><i class="material-icons">brightness_5</i></h2>
-                        <h5 class="center">Captures the path of the sun</h5>
-                        <p class="light">A Solarcan captures the path of the sun during several weeks, months or even a
-                            full year. A Solarcan is an ANALOG pinhole camera: it's a can with a tiny hole (0.5mm),
-                            through which light falls on a piece of photographic paper. There is no digital camera
-                            inside to capture pictures, videos or audio.</p>
+                        <h2 class="center"><i class="material-icons" style="color:#70547C">celebration</i></h2>
+                        <h5 class="center">Kompleksowa Oprawa Ślubów i Uroczystości</h5>
+                        <p class="light">Zadbamy o każdy detal, począwszy od bukietów i dekoracji kościoła po aranżacje
+                            sali weselnej, aby Twoje wyjątkowe chwile były niezapomniane.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center"><i class="material-icons">insert_photo</i></h2>
-                        <h5 class="center">Captures its surroundings</h5>
-                        <p class="light">The Solarcan will capture the surroundings, but only static elements such as
-                            bridges, trees and buildings. Sometimes these details can be quite clear, sometimes they are
-                            more vague. It also captures the reflection of light in windows or water. Moving elements
-                            will not be captured.</p>
+                        <h2 class="center"><i class="material-icons" style="color:#70547C">local_florist</i></h2>
+                        <h5 class="center">Kwiaciarnia z Wyjątkowymi Kompozycjami</h5>
+                        <p class="light">Oferujemy szeroki wybór bukietów, wiązanek, dekoracji stołowych i innych
+                            aranżacji kwiatowych, które sprawią, że każda okazja stanie się wyjątkowa.
+                        </p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center"><i class="material-icons">sentiment_satisfied_alt</i></h2>
-                        <h5 class="center">You won't be in the picture</h5>
-                        <p class="light">This is an extremely long exposure. Therefore, movements such as people walking
-                            by or even people inspecting the Solarcan up close, will NOT be visible in the photograph.
-                            Unless you are able to stand in front of it for weeks and not move one bit - which would be
-                            quite an achievement!</p>
+                        <h2 class="center"><i class="material-icons" style="color:#70547C">local_shipping</i></h2>
+                        <h5 class="center">Dostawa na Zamówienie pod Wskazany Adres</h5>
+                        <p class="light">Realizujemy szybkie i bezproblemowe dostawy świeżych kwiatów prosto z naszej
+                            pracowni pod wskazany adres, zapewniając najwyższą jakość i świeżość.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Image -->
-    <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/01. edited.jpg" alt="Solarcan image1"></div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Carousel -->
     <div class="container section-scrollspy" id="gallery">
@@ -146,7 +154,7 @@
     </div>
     <!-- Image  -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/01. edited.jpg" alt="Solarcan image1"></div>
+        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Don't touch -->
     <div class="container section-scrollspy" id="dont-touch">
@@ -168,31 +176,7 @@
     </div>
     <!-- Image -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/01. edited.jpg" alt="Solarcan image1"></div>
-    </div>
-    <!-- Section - Explanation -->
-    <div class="container section-scrollspy" id="how-it-works">
-        <div class="section">
-            <div class="row">
-                <div class="col s12 center">
-                    <h4><i class="fa fa-cogs" aria-hidden="true"></i> How it works</h4>
-                    <p class="light">Why does the sun’s path look like that?
-                        As we observe the Sun in the daytime sky we can see that it rises in the east and sets in the
-                        west with it being highest around midday. This isn’t because the Sun is moving, it’s because the
-                        Earth is spinning. Once every 24 hours. The reason it rises and sets and doesn’t just travel in
-                        a straight line through the sky is because Earth is tilted on its axis. 23.5 degrees to be
-                        exact. This tilt also happens to be what causes the seasons we have throughout our Earth year.
-                        As we travel in Space around the Sun different parts of Earth are exposed to the Sun’s rays more
-                        than others, giving us our Summer and Winter. During the hottest season, summer, the Sun is more
-                        direct and higher in the sky. Its highest point is during the summer solstice on the 21st June.
-                        The lowest point is the winter solstice on the 21st December.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Image -->
-    <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/01. edited.jpg" alt="Solarcan image1"></div>
+        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Contact  -->
     <div class="container  section-scrollspy" id="contact">
@@ -238,13 +222,11 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Solarcan</h5>
-                    <p class="grey-text text-lighten-4">This website was created by a Solarcan enthusiast. The Solarcan
-                        was created by Sam Cornwell. You can find more information or purchase your own Solarcan on the
-                        official website.</p>
+                    <h5 class="white-text">Witaj Bratku!</h5>
+                    <!-- <p class="grey-text text-lighten-4">Witaj Bratku!</p> -->
                 </div>
                 <div class="col l3 offset-l3 s12">
-                    <h5 class="white-text">Connect</h5>
+                    <h5 class="white-text">Znajd Nas</h5>
                     <ul>
                         <li><a class="white-text" target="_blank" href="https://solarcan.co.uk/"><i
                                     class="fa fa-link social-icon" aria-hidden="true"></i> Official website</a></li>
