--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     </div>
     <!-- Image -->
     <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+                alt="Solarcan image1"></div>
     </div>
     <!-- Section - Carousel -->
     <div class="container section-scrollspy" id="gallery">
@@ -154,7 +155,8 @@
     </div>
     <!-- Image  -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+                alt="Solarcan image1"></div>
     </div>
     <!-- Section - Don't touch -->
     <div class="container section-scrollspy" id="dont-touch">
@@ -176,7 +178,8 @@
     </div>
     <!-- Image -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" alt="Solarcan image1"></div>
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+                alt="Solarcan image1"></div>
     </div>
     <!-- Section - Contact  -->
     <div class="container  section-scrollspy" id="contact">
