--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <br><br>
             </div>
         </div> -->
-        <div class="parallax"><img src="assets/images/background.jpeg" style="width:100%;height:auto;"
-                alt="Solarcan background image"></div>
+        <div class="parallax"><img src="assets/images/background.jpeg" style="width:100%;height:auto; object-fit: cover;"
+                alt="Witaj Bratku!"></div>
     </div>
     <!-- Icon Section -->
     <div class="container">
@@ -119,7 +119,7 @@
     </div>
     <!-- Image -->
     <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto; object-fit: cover;"
                 alt="Solarcan image1"></div>
     </div>
     <!-- Section - Carousel -->
@@ -163,7 +163,7 @@
     </div>
     <!-- Image  -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto; object-fit: cover;"
                 alt="Solarcan image1"></div>
     </div>
     <!-- Section - Don't touch -->
@@ -186,7 +186,7 @@
     </div>
     <!-- Image -->
     <div class="parallax-container valign-wrapper">
-        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto;"
+        <div class="parallax"><img src="assets/images/background-2.jpeg" style="width: 100%; height: auto; object-fit: cover;"
                 alt="Solarcan image1"></div>
     </div>
     <!-- Section - Contact  -->
