--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col s12 m4">
                     <div class="icon-block">
                         <h2 class="center"><i class="material-icons" style="color:#70547C">local_shipping</i></h2>
-                        <h5 class="center">Dostawa na Zamówienie pod Wskazany Adres</h5>
+                        <h5 class="center">Dostawa pod Wskazany Adres</h5>
                         <p class="light">Realizujemy szybkie i bezproblemowe dostawy świeżych kwiatów prosto z naszej
                             pracowni pod wskazany adres, zapewniając najwyższą jakość i świeżość.</p>
                     </div>
