--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="row">
                 <div class="col s12 center">
                     <h4 class="center-align welcome" style="font-family: 'DM Sans';text-transform: capitalize"><i
-                            class="fa fa-money" aria-hidden="true"></i> Przykladowy Cennik</h4>
+                            class="fa fa-money" aria-hidden="true"></i> Przykładowy Cennik</h4>
                     <p class="light">Zapraszamy do zapoznania się z naszym cennikiem, który przedstawia orientacyjne
                         koszty naszych usług florystycznych. Warto jednak zaznaczyć, że nasze ceny są elastyczne i
                         otwarte na negocjacje, aby sprostać Twoim indywidualnym potrzebom oraz oczekiwaniom odnośnie
@@ -218,8 +218,10 @@
         <div class="section">
             <div class="row">
                 <div class="col s12 center">
-                    <h4><i class="fa fa-envelope" aria-hidden="true"></i> Kontakt</h4>
-                    <p class="center-align light">Możesz skontaktować się z nami mailowo, telefonicznie lub znaleźć nas pod wskazanym adresem:</p>
+                    <h4 style="font-family: 'DM Sans';text-transform: capitalize"><i class="fa fa-envelope"
+                            aria-hidden="true"></i> Kontakt</h4>
+                    <p class="center-align light">Możesz skontaktować się z nami mailowo, telefonicznie lub znaleźć nas
+                        pod wskazanym adresem:</p>
                     <!-- <div class="row">
                         <form class="col s12 card-panel" onsubmit="return sendMail(this);">
                             <div class="row" id="input-fields">
@@ -248,25 +250,28 @@
                         </form>
                     </div> -->
 
-                    
-                        <div class="row">
-                            <div class="col-sm-5"> 
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2339.4641793127116!2d22.9391475!3d54.1009749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e103988f0ae257%3A0xce48b0c97dfb0cb3!2sKwiaciarnia%20Witaj%20Bratku%20pracownia%20florystyczna!5e0!3m2!1spl!2sno!4v1710696862132!5m2!1spl!2sno" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            </div>
-                            <div class="col-sm-3">
-                                <h6>Adres:</h6>
-                                <address>
-                                    Sejneńska 6D<br>
-                                    16-400 Suwałki<br>
-                                </address>
-                                <h6>Dane Kontaktowe:</h6> 
-                                <ul>
-                                    <li><i class="fa fa-phone"></i> +48 570 740 747</li>
-                                    <li><i class="fa fa-envelope-o"></i> PASJA.FLORA@OP.PL</li>
-                                </ul>
-                            </div>
+
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2339.4641793127116!2d22.9391475!3d54.1009749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e103988f0ae257%3A0xce48b0c97dfb0cb3!2sKwiaciarnia%20Witaj%20Bratku%20pracownia%20florystyczna!5e0!3m2!1spl!2sno!4v1710696862132!5m2!1spl!2sno"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                   
+                        <div class="col-sm-3">
+                            <h6>Adres:</h6>
+                            <address>
+                                Sejneńska 6D<br>
+                                16-400 Suwałki<br>
+                            </address>
+                            <h6>Dane Kontaktowe:</h6>
+                            <ul>
+                                <li><i class="fa fa-phone"></i> +48 570 740 747</li>
+                                <li><i class="fa fa-envelope-o"></i> PASJA.FLORA@OP.PL</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -276,7 +281,8 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text" style="font-family: 'Playlist', sans-serif;text-transform:capitalize">Witaj Bratku!</h5>
+                    <h5 class="white-text" style="font-family: 'Playlist', sans-serif;text-transform:capitalize">Witaj
+                        Bratku!</h5>
                     <!-- <p class="grey-text text-lighten-4">Witaj Bratku!</p> -->
                 </div>
                 <div class="col l3 offset-l3 s12">
