--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 onclick="closemagnify()"><i class="fa fa-times" aria-hidden="true"></i></h1>
         <div id="img_here"></div>
     </div>
-    <div class="navbar-fixed" id="home">
+    <div class="navbar-fixed" id="o-nas">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
                 <a id="logo-container" href="#" class="brand-logo"
@@ -43,19 +43,19 @@
                     Bratku!</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#home">O Nas</a></li>
-                    <li><a href="#gallery">Galeria</a></li>
-                    <li><a href="#dont-touch">Cennik</a></li>
-                    <li><a href="#contact">Kontakt</a></li>
+                    <li><a href="#o-nas">O Nas</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#cennik">Cennik</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </div>
         </nav>
     </div>
     <ul id="mobile-demo" class="sidenav">
-        <li><a class="sidenav-close" href="#home">O Nas</a></li>
-        <li><a class="sidenav-close" href="#gallery">Galeria</a></li>
-        <li><a class="sidenav-close" href="#dont-touch">Cennik</a></li>
-        <li><a class="sidenav-close" href="#contact">Kontakt</a></li>
+        <li><a class="sidenav-close" href="#o-nas">O Nas</a></li>
+        <li><a class="sidenav-close" href="#galeria">Galeria</a></li>
+        <li><a class="sidenav-close" href="#cennik">Cennik</a></li>
+        <li><a class="sidenav-close" href="#kontakt">Kontakt</a></li>
     </ul>
     <!-- Banner  -->
     <div id="index-banner" class="parallax-container section scrollspy">
@@ -80,7 +80,7 @@
             </div>
             <div class="row center">
                 <a href="assets/images/wizytowka.pdf" id="download-button"
-                    class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C">Nasza
+                    class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C" target="_blank">Nasza
                     Wizytówka</a>
             </div>
             <div class="row">
@@ -119,7 +119,7 @@
                 style="width: 100%; height: auto; object-fit: cover;" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Carousel -->
-    <div class="container section-scrollspy" id="gallery">
+    <div class="container section-scrollspy" id="galeria">
         <div class="section">
             <div class="row">
                 <div class="col s12 center">
@@ -164,7 +164,7 @@
                 style="width: 100%; height: auto; object-fit: cover;" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Don't touch -->
-    <div class="container section-scrollspy" id="dont-touch">
+    <div class="container section-scrollspy" id="cennik">
         <div class="section">
             <div class="row">
                 <div class="col s12 center">
@@ -210,7 +210,7 @@
                 style="width: 100%; height: auto; object-fit: cover;" alt="Solarcan image1"></div>
     </div>
     <!-- Section - Contact  -->
-    <div class="container  section-scrollspy" id="contact">
+    <div class="container  section-scrollspy" id="kontakt">
         <div class="section">
             <div class="row">
                 <div class="col s12 center">
