Fix - sections links

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/scripts/init.js"></script>
     <script src="assets/scripts/email.js"></script>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="assets/scripts/index.js" type="text/javascript"></script>
 </body>
 
 </html>
