--- a/index.html
+++ b/index.html
@@ -271,38 +271,29 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
     <!-- Footer  -->
     <footer class="page-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text" style="font-family: 'Playlist', sans-serif;text-transform:capitalize">Witaj
-                        Bratku!</h5>
-                    <!-- <p class="grey-text text-lighten-4">Witaj Bratku!</p> -->
-                </div>
-                <div class="col l3 offset-l3 s12">
-                    <h5 class="white-text">Znajdź Nas</h5>
-                    <ul>
-                        <li><a class="white-text" target="_blank"
-                                href="https://www.facebook.com/profile.php?id=100085653362711"><i
-                                    class="fa fa-facebook social-icon" aria-hidden="true"></i> Facebook</a></li>
-                        <li><a class="white-text" target="_blank" href="https://maps.app.goo.gl/nMErYKDxvJbxuQ4h7"><i
-                                    class="fa fa-map-marker" aria-hidden="true"></i> Google Maps</a></li>
-                    </ul>
-                </div>
+        <div class="container center-align">
+            <div class="col l3 offset-l3 s12">
+                <h5 class="white-text">Znajdź Nas</h5>
+                <ul>
+                    <li><a class="white-text" target="_blank"
+                            href="https://www.facebook.com/profile.php?id=100085653362711"><i
+                                class="fa fa-facebook social-icon" aria-hidden="true"></i> Facebook</a></li>
+                    <li><a class="white-text" target="_blank" href="https://maps.app.goo.gl/nMErYKDxvJbxuQ4h7"><i
+                                class="fa fa-map-marker" aria-hidden="true"> </i> Google Maps</a></li>
+                </ul>
             </div>
+        </div>
         </div>
         <div class="footer-copyright">
             <div class="container center-align">
                 <a class="brown-text text-lighten-3" href="https://github.com/witajbratku/witajbratku">©
-                    witajbratku</a>
-                All
-                rights reserved <br>
+                    witajbratku</a> All rights reserved <br>
             </div>
         </div>
     </footer>
