Link do maila i telefonu

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             </div>
             <div class="row center">
                 <a href="assets/images/wizytowka.pdf" id="download-button"
-                    class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C" target="_blank">Nasza
+                    class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C"
+                    target="_blank">Nasza
                     Wizytówka</a>
             </div>
             <div class="row">
@@ -266,8 +267,10 @@
                             </address>
                             <h6>Dane Kontaktowe:</h6>
                             <ul>
-                                <li><i class="fa fa-phone"></i> +48 570 740 747</li>
-                                <li><i class="fa fa-envelope-o"></i> PASJA.FLORA@OP.PL</li>
+                                <li><a href="tel:+48 570 740 747" target="_blank" style="color: #70547C;"><i
+                                            class="fa fa-phone" aria-hidden="true"></i></a> +48 570 740 747</li>
+                                <li><a href="mailto:PASJA.FLORA@OP.PL" target="_blank" style="color: #70547C;"><i
+                                            class="fa fa-envelope" aria-hidden="true"></i></a> PASJA.FLORA@OP.PL</li>
                             </ul>
                         </div>
                     </div>
