--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
                 <a id="logo-container" href="#" class="brand-logo"
-                    style="font-family: 'Playlist', sans-serif;text-transform:capitalize">Witaj
+                    style="font-family: 'Playlist', sans-serif;text-transform:capitalize; color: #70547C;">Witaj
                     Bratku!</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
@@ -80,8 +80,7 @@
             <div class="row center">
                 <a href="assets/images/wizytowka.pdf" id="download-button"
                     class="btn-large waves-effect waves-light lighten-1" style="background-color:#70547C"
-                    target="_blank">Nasza
-                    Wizytówka</a>
+                    target="_blank">Nasza Wizytówka</a>
             </div>
             <div class="row">
                 <hr color="#70547C">
@@ -105,7 +104,7 @@
                 <div class="col s12 m4">
                     <div class="icon-block">
                         <h2 class="center"><i class="material-icons" style="color:#70547C">local_shipping</i></h2>
-                        <h5 class="center">Dostawa pod Wskazany Adres</h5>
+                        <h5 class="center">Dostawa na Zamówienie pod Wskazany Adres</h5>
                         <p class="light">Realizujemy szybkie i bezproblemowe dostawy świeżych kwiatów prosto z naszej
                             pracowni pod wskazany adres, zapewniając najwyższą jakość i świeżość.</p>
                     </div>
@@ -123,7 +122,7 @@
         <div class="section">
             <div class="row">
                 <div class="col s12 center">
-                    <h3 class="center-align welcome" style="font-family: 'DM Sans';">Galeria Naszych Projektów</h3>
+                    <h4 class="center-align welcome" style="font-family: 'DM Sans';">Galeria Naszych Projektów</h4>
                     <p class="light">Witaj w naszej galerii projektów, miejscu pełnym inspiracji i piękna, gdzie możesz
                         zanurzyć się w świat naszych najwyższej jakości florystycznych kreacji. Odkryj różnorodność
                         naszych projektów, poczując magię kwiatów i niepowtarzalność każdej aranżacji, która tworzy
